add canvas element
add canvas element

--- a/test.html
+++ b/test.html
@@ -1,5 +1,6 @@
 <html>
 <title>Struct constructor/initializers highp bug.</title>
+    <canvas id="canvas"></canvas>
 <script type="application/javascript">
     "use strict"; 
     var canvas = document.getElementById('canvas');
